refactoring previous chapter